<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project \"%s\" repository is downloaded</string>
    <string name="check_the_status">Check the status…</string>

    <string name="download">Download…</string>
    <string name="downloaded">Downloaded</string>
    <string name="button_loading">We are loading </string>
    <string name="button_clicked">Clicked</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_title">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="download_image">Download image</string>

    <!-- Github repository links-->
    <string name="glide_github_repository_link">https://github.com/bumptech/glide</string>
    <string name="load_app_github_repository_link">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_github_repository_link">https://github.com/square/retrofit</string>

    <string name="please_select_file">Please select the file to download</string>

    <string name="notification_channel_description">LoadApp reminder</string>
    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_channel_name" translatable="true">LoadApp</string>

    <string name="downloaded_successfully">The repository has been successfully downloaded.</string>
    <string name="downloaded_failed">Download Failed.</string>

    <string name="ok">OK</string>

    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="file_name">Glide - Image Loading Library by BumpTech</string>
    <string name="status">Success</string>
</resources>