<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/download_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/download_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            app:layout_constraintBottom_toTopOf="@+id/download_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_image">

            <RadioButton
                android:id="@+id/glide_radio_button"
                style="@style/TitleTextStyle"
                android:layout_margin="@dimen/space10"
                android:text="@string/glide_title" />

            <RadioButton
                android:id="@+id/load_app_radio_button"
                style="@style/TitleTextStyle"
                android:layout_margin="@dimen/space10"
                android:text="@string/load_app_title" />

            <RadioButton
                android:id="@+id/retrofit_radio_button"
                style="@style/TitleTextStyle"
                android:layout_margin="@dimen/space10"
                android:text="@string/retrofit_title" />
        </RadioGroup>

        <com.devhch.loadapp.LoadingButton
            android:id="@+id/download_button"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/download_button_height"
            android:layout_margin="@dimen/space20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>